fix spacing of name in expense approval (#183)

--- a/frontend/src/css/containers/TransactionDetail.css
+++ b/frontend/src/css/containers/TransactionDetail.css
@@ -22,6 +22,7 @@
 }
 .TransactionDetail-user {
   overflow: auto;
+  padding-bottom: 0.5rem;
 }
 
 .TransactionDetail-user .ProfilePhoto {
